# slouch

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  main.cpp
